Fix SonarQube issues: remove commented code, add generics, static setter, constants, boolean expressions
Fixes for:

Remove commented-out code (CalendarApp.java)
Add parametrized types to raw Calendar generics (SourceTrayRowFactory, CreateCourseModalController, CreateLessonModalController)
Make LocalizationService.setLocale static (removes instance-sets-static-field warning)
Define USER_ID_PARAM constant in NotificationDao (replaces 4 duplicated "userId" literals)
Replace Stream.collect(Collectors.toList()) with Stream.toList() in NotificationService
Fix unused return value of size() in LessonDao (use isEmpty() instead)
Use Boolean.FALSE.equals() instead of unboxed !isShowing in NavbarController